[MI-3241]: Fixed the alignment of Create Subscription button on the Jira Subscriptions page

--- a/webapp/src/components/modals/channel_subscriptions/channel_subscriptions_modal.scss
+++ b/webapp/src/components/modals/channel_subscriptions/channel_subscriptions_modal.scss
@@ -41,4 +41,12 @@
             }
         }
     }
+
+    .title-message-div {
+        justify-content: space-between;
+        h2 {
+            margin-top: 15px;
+            margin-bottom: 15px;
+        }
+    }
 }
